[package]
name = "create-url"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
tokio = { version = "1.28.2", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
rand = "0.8.5"
base64 = "0.21.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
aws_lambda_events = "0.16.0"
lambda_http = "0.14.0"
