[package]
name = "redirect-url"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
tokio = { version = "1.28.2", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
